[package]
name = "spaghetti"
version = "0.1.0"
authors = ["Aaron Marshall <hi@imaaronnicetomeetyou.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
serde = { version = "1.0", features = ["derive"]}
rocket_contrib = { version = "0.4.4", default-features = false, features = ["json"] }